fix long title bug. but still remain a bug : image are not align when big title

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -158,8 +158,8 @@ footer {
  *  Media list
  */
 
-ul.list-inline li h3{
-	max-width: 150px;
+ul.list-inline li h4{
+	max-width: 190px;
 }
 
 ul.list-inline li img {
